Revision history for Perl extension Math::Polygon

20070425 Request by Christian Sauer: polygon intersection
   paper with nice algorithm: http://citeseer.ist.psu.edu/cache/papers/cs/25021/http:zSzzSzfractal.dam.fmph.uniba.skzSz~sccgzSzproceedingszSz1998zSzZalik.pdf/zalik98quick.pdf
20121024 Request by Rick Rutgers: widening polygon contour

version 1.09:

version 1.08: Tue  2 Jan 12:01:29 CET 2018

	Improvements:
	- convert to GIT
	- move to GitHub
	- documentation improvements
	- indentation tabs should be blanks.

version 1.07: Wed 27 Dec 11:14:00 CET 2017

	Fixes:
	- float rounding issue in Perl >= 5.27 breaks tests [cpan_testers]

	Improvements:
	- new ::Calc::polygon_format()

version 1.06: Sun 16 Jul 13:04:43 CEST 2017

	Fixes:
	- missed a spelling fix.  rt.cpan.org#118297 [Gregor Herrmann]
	- fix $obj->mirror rt.cpan.org#122487 [Michael Scott]

	Improvements:
	- remove dependency to Test::Pod

version 1.05: Wed Dec 28 12:55:41 CET 2016

	Fixes:
	- spelling fix.  rt.cpan.org#118297 [Angel Abad]

	Improvements:
	- add distance to polygon calculation [Andreas Koenig]
	- use Perl from PATH when running in tests stand-alone.

version 1.04: Fri 23 Sep 16:03:17 CEST 2016

	Fixes:
	- contains on vertical edge
	  rt.cpan.org#118030 [Marcus Robst]

	Improvements:
	- remove duplicate points in chainHull_2D
	  reported by [Michael R. Davis]

version 1.03: Tue Jan 21 14:33:07 CET 2014

	Improvements:
	- add example to centroid, suggested by [Michael R. Davis]
	- change documentation style.

version 1.02: Mon Sep 19 12:06:32 CEST 2011

	Improvements:
	- Added centroid functions, implemented by [Fred Zellinger]

version 1.01: Mon May 25 14:35:26 CEST 2009

	Improvements:
	- Added Math::Polygon::Convex with chainHull_2D implementation by
	  [Jari Turkia] with many improvements.  Tests in t/50chainhull.t
	- do not run t/pod.t in devel environment.

version 1.00: Fri Feb  1 15:32:20 CET 2008

	- ::Calc::polygon_is_open() will die on empty polygon
